# func-dre-refactor

./: CMakeLists.txt  err  main.c  readme.md  startup.sh
docs/: 求导工具和语法分析.md
parser/: CMakeLists.txt  lexer.l  parser.y
parser/ast/: CMakeLists.txt  ast.c  ast.h  builtin_func.c  emit.c  format.c  func.c  help.c  init.c  mod.h  simplify.c  symbol.c  yacc.c
